--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,7 +22,7 @@ jobs:
         go-version: '1.21.0'
 
     - name: Build
-      run: go build -v ./...
+      run: GOOS=windows GOARCH=amd64 go build -v ./...
 
     - name: Test
-      run: go test -v ./...
+      run: GOOS=windows GOARCH=amd64 go test -v ./...
